@@ -1,3 +1,9 @@
+2013-04-05  Jan Kratochvil  <jan.kratochvil@redhat.com>
+
+	Fix variable name shadowing.
+	* linux-tdep.c (linux_find_memory_regions_full): Rename outer variable
+	filename to mapsfilename and update its uses.
+
 2013-04-04  Pedro Alves  <palves@redhat.com>
 	    Hui Zhu  <hui@codesourcery.com>
 
